--- a/bibtex.bib
+++ b/bibtex.bib
@@ -70,6 +70,12 @@
   year={2013},
   url={http://docs.mongodb.org/manual/tutorial/expire-data/}
 }
+@misc{mongo-two-phase-commits,
+  author={10gen, Inc.},
+  title={Perform Two Phase Commits -- MongoDB Manual 2.4.4},
+  year={2013},
+  url={http://docs.mongodb.org/manual/tutorial/perform-two-phase-commits/}
+}
 @misc{ms-ajax-json-dates
   author={Bertrand Le Roy},
   title={Dates and JSON},
