--- a/bibtex.bib
+++ b/bibtex.bib
@@ -53,30 +53,30 @@
   publisher={Morgan Kaufmann}
 }
 @misc{mongo-categories,
-  author={10gen, Inc.},
+  author={10gen},
   title={Category Hierarchy -- MongoDB Manual 2.4.4},
   year={2013},
   url={http://docs.mongodb.org/manual/use-cases/category-hierarchy/}
 }
 @misc{mongo-indexing,
-  author={10gen, Inc.},
+  author={10gen},
   title={Indexing Overview -- MongoDB Manual 2.4.4},
   year={2013},
   url={http://docs.mongodb.org/manual/core/indexes/}
 }
 @misc{mongo-expiry,
-  author={10gen, Inc.},
+  author={10gen},
   title={Expire Data from Collections by Setting TTL -- MongoDB Manual 2.4.4},
   year={2013},
   url={http://docs.mongodb.org/manual/tutorial/expire-data/}
 }
 @misc{mongo-two-phase-commits,
-  author={10gen, Inc.},
+  author={10gen},
   title={Perform Two Phase Commits -- MongoDB Manual 2.4.4},
   year={2013},
   url={http://docs.mongodb.org/manual/tutorial/perform-two-phase-commits/}
 }
-@misc{ms-ajax-json-dates
+@misc{ms-ajax-json-dates,
   author={Bertrand Le Roy},
   title={Dates and JSON},
   year={2008},
