--- a/bibtex.bib
+++ b/bibtex.bib
@@ -76,6 +76,12 @@
   year={2013},
   url={http://docs.mongodb.org/manual/tutorial/perform-two-phase-commits/}
 }
+@misc{mongo-production,
+  author={10gen},
+  title={Production Deployments -- MongoDB Manual 2.4.4},
+  year={2013},
+  url={http://www.mongodb.org/about/production-deployments/}
+}
 @misc{ms-ajax-json-dates,
   author={Bertrand Le Roy},
   title={Dates and JSON},
